fix the overflow

--- a/src/containers/blog/blog.css
+++ b/src/containers/blog/blog.css
@@ -1,6 +1,7 @@
 .gpt4-blog {
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
 }
 
 .gpt4-blog-heading {
